--- a/custom.scss
+++ b/custom.scss
@@ -285,16 +285,25 @@
   align-items: center;
   justify-content: space-between;
   position: relative;
+  font-size: smaller;
 }
 
 .reveal .slides .timeline .item .text{
   width: 100%;
+  min-height: 450px;
+  font-size: x-large;
+  // align vertical in centre
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
 }
 
 
 .reveal .slides .timeline .item .arrow{
   width: 100%;
-  height: 50px;
+  height: 10%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -302,6 +311,24 @@
   font-weight: bold;
   clip-path: polygon(0% 0%, 90% 0%, 100% 50%, 90% 100%, 0% 100%, 10% 50%);
 }
+
+.reveal .slides .timeline .item .img-wrapper{
+  width: 90%;
+  // height: 45%;
+  min-height: 450px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.reveal .slides .timeline .item .img-wrapper img{
+  padding: 0%;
+}
+
+// .reveal .slides .timeline .item .img-wrapper img{
+//   border-radius: 50%;
+//   border: 5px solid #0f6e91;
+// }
 
 // .timeline {
 //   width
