--- a/custom.scss
+++ b/custom.scss
@@ -225,9 +225,18 @@
 // }
 
 
+// .reveal .slide-background:first-of-type {
+//   // background-color: #b0efec; /* Background color (optional) */
+//   background-image: url('data/logo.png'), url('data/tile.png'), url('data/by-nc-sa.png'); /* Path to your logo */
+//   background-size: 26%, 30%, 10%; /* Adjust the size of the logo */
+//   background-position-x:  3%, 0%, 99%;
+//   background-position-y: 50%, 0%, 99%;
+//   background-repeat: no-repeat, repeat-y, no-repeat; /* Ensure the logo isn't repeated */
+// }
+
 .reveal .slide-background:first-of-type {
   // background-color: #b0efec; /* Background color (optional) */
-  background-image: url('data/logo.png'), url('data/tile.png'), url('data/by-nc-sa.png'); /* Path to your logo */
+  background-image: url('../../../../../data/logo.png'), url('../../../../../data/tile.png'), url('../../../../../data/by-nc-sa.png'); /* Path to your logo */
   background-size: 26%, 30%, 10%; /* Adjust the size of the logo */
   background-position-x:  3%, 0%, 99%;
   background-position-y: 50%, 0%, 99%;
